fixed spacing

--- a/skietbaan_fe/src/components/NotificationsStyle.css
+++ b/skietbaan_fe/src/components/NotificationsStyle.css
@@ -242,8 +242,8 @@
   }
 
   .format-content {
-    margin-left: 260px;
-    margin-right: 260px;
+    margin-left: 17%;
+    margin-right: 17%;
     position: static;
     padding-top: 100px;
   }
